# project_n3

./: Cargo.toml  README.md  cert.pem  key.pem  nopass.pem
locales/en-US/: main.ftl
locales/ru/: main.ftl
src/: main.rs
templates/: index.html
