[package]
name = "project_n3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = "0.10"
actix-web-middleware-redirect-scheme = "3.0"
tera = "1"
fluent = "0.16.0"
fluent-templates = { version = "0.8.0", features = ["tera"] }